Fix extra line spaces and white spaces in scrollable window.

--- a/code-smell-detector/src/app/home/home.component.css
+++ b/code-smell-detector/src/app/home/home.component.css
@@ -74,5 +74,14 @@ pre {
 .highlighted-line {
     background-color: #ffe6e6;
     display: block;
+    width: 1000px;
   }
+
+.no-extra-space {
+    display: block;
+    margin: 0;
+    padding: 0;
+    line-height: 0.25;
+}
+  
   
